--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Terms of Service – [Your App Name]</title>
-  <meta name="description" content="Terms of Service for [Your App Name]" />
+  <title>Terms of Service – Jose Aley Business</title>
+  <meta name="description" content="Terms of Service for Jose Aley Business" />
   <style>
     :root { --max: 860px; --fg:#111; --muted:#555; --bg:#fff; --line:#e8e8e8; }
     html,body { background:var(--bg); color:var(--fg); font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin:0; }
@@ -22,7 +22,7 @@
 </head>
 <body>
   <header>
-    <h1>Terms of Service – <span class="placeholder">[Your App Name]</span></h1>
+    <h1>Terms of Service – <span class="placeholder">Jose Aley Business</span></h1>
     <p class="updated"><strong>Last updated:</strong> December 22, 2025</p>
   </header>
 
@@ -30,7 +30,7 @@
     <section>
       <h2>1) Service Description</h2>
       <p>
-        <span class="placeholder">[Your App Name]</span> provides a connection to the WhatsApp Business Platform (Meta) API
+        <span class="placeholder">Jose Aley Business</span> provides a connection to the WhatsApp Business Platform (Meta) API
         to send and manage messages.
       </p>
     </section>
@@ -78,7 +78,7 @@
     <section>
       <h2>7) Limitation of Liability</h2>
       <p>
-        To the maximum extent permitted by law, <span class="placeholder">[Your App Name]</span> is not liable for indirect,
+        To the maximum extent permitted by law, <span class="placeholder">Jose Aley Business</span> is not liable for indirect,
         incidental, or consequential damages, or for loss of data, profits, or business.
       </p>
     </section>
