--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <section>
       <h2>9) Contact</h2>
-      <p>Questions: <span class="placeholder">[your email]</span></p>
+      <p>Questions: <span class="placeholder">josedaniel.aley@gmail.com</span></p>
     </section>
   </main>
 
